src/pages/fr/v1.18.0/rn-sdk/modules.mdx
---
title: "SDK React Native - Modules"
metaTitle: "SDK React Native - Modules"
metaDescription: "Liste des modules publics du SDK React Native"
---
import LinkRow from '~/components/LinkRow.astro'
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

Le SDK React Native exporte plusieurs composants et méthodes pour vous permettre de personnaliser votre enregistrement :

## Connector

```js
interface IORTrackerConnector {
  startSession: (
    projectKey: string,
    optionsDict: Options,
    projectUrl?: string
  ) => void;
  setMetadata: (key: string, value: string) => void;
  event: (name: string, payload?: string) => void;
  setUserID: (userID: string) => void;
  userAnonymousID: (userID: string) => void;
}
```

- [startSession()](/rn-sdk/start) : démarre l'enregistrement.
- [setMetadata()](/rn-sdk/set-metadata) : Définit un champ de métadonnées et l'enregistre dans le cadre de l'enregistrement.
- [event()](/rn-sdk/event) : Envoie des événements personnalisés afin qu'ils soient enregistrés dans le cadre de vos relectures avec cette méthode.
- [setUserID()](/rn-sdk/set-user-id) : Identifiez vos utilisateurs avec cette méthode.
- [patchNetwork()](/rn-sdk/patch-network) : Applique un correctif à fetch et/ou XMLHttpRequest pour enregistrer les requêtes réseau.
- 
## Components

<div class="or-rowlist">
  <LinkRow href="/rn-sdk/touch" title="ORTouchTrackingView" icon="canvas" desc="Vue utilisée pour suivre les événements tactiles." />
  <LinkRow href="/rn-sdk/sanitization" title="ORSanitizedView" icon="settings" desc="Vue qui vous permet d'assainir (ou de flouter) des parties de votre enregistrement" />
  <LinkRow href="/rn-sdk/inputs" title="ORTrackedInput" icon="metadata" desc="TextInput qui enregistre les événements de saisie" />
  <LinkRow href="/rn-sdk/analytics" title="ORAnalyticsView" icon="ai" desc="Vue marquée qui envoie un événement une fois qu'elle apparaît à l'écran et lorsqu'elle le quitte" />
</div>
